namespace PlayerController
{
    public static class AnimationStrings
    {
        public const string isMoving = "isMoving";
        public const string isRunning = "isRunning";
        public const string isGrounded = "isGrounded";
        public const string yVelocity = "yVelocity";
        public const string jump = "jump";
        public const string isOnWall = "isOnWall"; 
        public const string isOnCeiling = "isOnCeiling";
        public const string hasTarget = "hasTarget";
        public const string canMove = "canMove";
        public const string isDead = "isDead";
    }
}